--- a/app/index.html
+++ b/app/index.html
@@ -5,30 +5,100 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Foil.Network</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
   <div class="wrapper">
     <header class="header">
-      <div class="container">
 
-        <nav class="nav">
+      <nav class="nav">
 
-          <ul class="menu__list">
+        <ul class="menu__list menu-left">
+          <li class="menu__list-item ">
+            <a class="menu__list-link" href="#">
+              <img class="menu__list-img logo" src="images/logo.svg" alt="logo">
+            </a>
+          </li>
+        </ul>
+        <ul class="menu__list menu-center">
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">
+              Foil
+            </a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">
+              Learn
+            </a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">
+              Blog
+            </a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">
+              Product
+            </a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">
+              Community
+            </a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">
+              Block Explorer
+            </a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">
+              Contact Us
+            </a>
+          </li>
+        </ul>
+        <ul class="menu__list menu-right">
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">
 
-            <li class="menu__list-item">
+            </a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">
+
+            </a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">
+
+            </a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">
+              EN
+            </a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">
+
+            </a>
+          </li>
+        </ul>
+
+        <!-- <li class="menu__list-item">
               <a class="menu__list-link" href="#">
 
               </a>
-            </li>
+            </li> -->
 
-          </ul>
 
-        </nav>
+        </ul>
 
-      </div>
+      </nav>
+
+
     </header>
     <main>
 
