--- a/app/index.html
+++ b/app/index.html
@@ -59,22 +59,24 @@
             </a>
           </li>
         </ul>
-        <ul class="menu__list menu-right">
+        <ul class="menu__list menu-right__social">
           <li class="menu__list-item">
             <a class="menu__list-link" href="#">
-
+              <img class="menu__list-img" src="images/medium.svg" alt="logo">
             </a>
           </li>
           <li class="menu__list-item">
             <a class="menu__list-link" href="#">
-
+              <img class="menu__list-img" src="images/telegram.svg" alt="logo">
             </a>
           </li>
           <li class="menu__list-item">
             <a class="menu__list-link" href="#">
-
+              <img class="menu__list-img" src="images/twitter.svg" alt="logo">
             </a>
           </li>
+        </ul>
+        <ul class="menu__list menu-right__langavatar">
           <li class="menu__list-item">
             <a class="menu__list-link" href="#">
               EN
@@ -82,7 +84,7 @@
           </li>
           <li class="menu__list-item">
             <a class="menu__list-link" href="#">
-
+              <img class="menu__list-img" src="images/avatar.svg" alt="" >
             </a>
           </li>
         </ul>
